Stubbing Out Boost Traits
+ Need to overload various traits and proxies to support Boost mutexes.

--- a/Source/MutexGuarded/MutexGuarded.vcxproj.filters
+++ b/Source/MutexGuarded/MutexGuarded.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="MutexGuarded.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BoostTraits.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
