Changed Casing and Removed C++17 Requirement
+ In an effort to make this as C++11 compliant, I've reimplemented `std::void_t`.
+ Renamed some structs beyond just adapting the casing.

--- a/Source/MutexGuarded/MutexGuarded.vcxproj.filters
+++ b/Source/MutexGuarded/MutexGuarded.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="BoostTraits.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nonstd.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
