--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "Submodule/Catch"]
-   path = Submodule/Catch
+[submodule "third-party/catch2"]
+   path = third-party/catch2
    url = https://github.com/catchorg/Catch2.git
-   branch = v2.3.0
+   branch = v2.7.2
