--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,17 @@ include(conan/conanbuildinfo.cmake)
 conan_basic_setup()
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Werror -Wpedantic --coverage")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -Werror -Wpedantic")
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
+
+if (UNIX)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Werror -Wpedantic --coverage")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Wextra -Werror -Wpedantic")
+endif (UNIX)
+
+if (WIN32)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /W4 /bigobj")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /W4 /bigobj")
+endif (WIN32)
 
 set(SOURCES
     tests/unit_tests.cpp
@@ -26,4 +34,6 @@ include_directories(${SOURCE_DIR} ${THIRD_PARTY})
 
 add_executable(mutex-guarded ${SOURCES})
 
-target_link_libraries(mutex-guarded stdc++ ${CONAN_LIBS})
+if (UNIX)
+    target_link_libraries(mutex-guarded stdc++ ${CONAN_LIBS})
+endif (UNIX)
